1. added text-overflow to developer 2.fixed the link color issues 3.updated the tool bar in unassigned task section 4.fixed border-bottom in developer section and assignment section

--- a/app/assets/stylesheets/assignments_widget.css.scss
+++ b/app/assets/stylesheets/assignments_widget.css.scss
@@ -86,6 +86,9 @@
             margin-left: 10px;
             line-height: 2;
             color: white;
+            a {
+                color: white;
+            }
         }
         .task-selection {
             /* general styles */
@@ -117,16 +120,22 @@
                 flex: 0 1 20%;
                 display: flex;
                 flex-direction: column;
-                /*border-bottom: 1px solid $gray;
-                border-right: 1px solid $gray;*/
-                padding-bottom: 10px;
-                box-shadow: 1px -3px 5px -2px rgba(0, 0, 0, 0.75);
+                border-bottom: 1px solid $gray;
+                border-right: 1px solid $gray;
+                box-shadow: 1px -3px 5px -2px rgba(0, 0, 0, 0.45);
                 .developer {
+                    display: flex;
                     margin: 24.5px 0px 24.5px 15px;
                     .developer-name {
                         position: relative;
                         font-size: 10pt;
                         margin-left: 5px;
+                        white-space: nowrap;
+                        width: 70%;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: inline-block;
+                        align-self: center;
                     }
                 }
             }
@@ -138,8 +147,8 @@
             .assignment-section {
                 overflow-y: hidden;
                 flex: 0 1 100%;
-                padding-bottom: 16px;
-                /*border-bottom: 1px solid #d6d6d6;*/
+                padding-bottom: 2px;
+                border-bottom: 1px solid $gray;
                 .assignment {
                     flex: 0 0 100%;
                     display: flex;
@@ -184,6 +193,9 @@
                                 overflow: hidden;
                                 text-overflow: ellipsis;
                             }
+                            a {
+                                color: $darkgray;
+                            }
                         }
                         .task-selection-github a {
                             color: $darkgray !important;
@@ -208,10 +220,6 @@
             }
         }
         .tool-bar {
-            .input-section {
-                margin-bottom: 6px;
-                width: 74%;
-            }
             position: fixed;
             margin-left: 0px;
             margin-right: 0px;
@@ -223,17 +231,21 @@
             z-index: 200;
             border-radius: 0px;
             box-shadow: 0px 1px 2px 0px #969696;
+            .input-section {
+                margin-bottom: 6px;
+                width: 74%;
+            }
             .tools {
                 color: $devblack;
                 margin: 7px 3px 7px 3px;
             }
         }
         .unassigned-task-container {
-            padding-top: 55px;
+            padding-top: 25px;
             position: fixed;
             overflow-y: auto;
             width: 15%;
-            height: calc(100% - 143px);
+            height: calc(100% - 170px);
             background-color: #F2F2F2;
             right: 0;
             box-shadow: 0px 1px 2px 0px #969696;
